redo it as pure logic b/c of android being backwards;